--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,9 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/$_SERVICE_NAME:$COMMIT_SHA', '.']
+  args: ['build', '-t', 'gcr.io/flask-helloworld:$COMMIT_SHA', '.']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/$_SERVICE_NAME:$COMMIT_SHA']
+  args: ['push', 'gcr.io/flask-helloworld:$COMMIT_SHA']
 images:
-- 'gcr.io/$_SERVICE_NAME:$COMMIT_SHA'
+- 'gcr.io/flask-helloworld:$COMMIT_SHA'
 options:
   logging: CLOUD_LOGGING_ONLY
