--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,12 +1,11 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/flask-helloworld:$COMMIT_SHA', '.']
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/flask-helloworld:$COMMIT_SHA']
+  args: ['build', '-t', 'us.gcr.io/flask-helloworld:$TAG', '.']
+  env:
+  - 'TAG=1.0.0'
+- name: 'us.gcr.io/cloud-builders/docker'
+  args: ['push', 'us.gcr.io/flask-helloworld:$COMMIT_SHA']
 images:
 - 'gcr.io/flask-helloworld:$COMMIT_SHA'
 options:
   logging: CLOUD_LOGGING_ONLY
-serviceAccount: 'projects/$PROJECT_ID/serviceAccounts/$_CLOUD_BUILD_SA@$PROJECT_ID.iam.gserviceaccount.com'
-substitutions:
-  _CLOUD_BUILD_SA: 'cloud-build-sa'
