--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,16 @@
+substitutions:
+  _TAG: "1.0.0"
+
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'us.gcr.io/flask-helloworld:$TAG', '.']
-  env:
-  - 'TAG=1.0.0'
-- name: 'us.gcr.io/cloud-builders/docker'
-  args: ['push', 'us.gcr.io/flask-helloworld:$COMMIT_SHA']
+  args: ['build', '-t', 'us.gcr.io/flask-helloworld:${_TAG}', '.']
+
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['push', 'us.gcr.io/flask-helloworld:${_TAG}']
+
 images:
-- 'gcr.io/flask-helloworld:$COMMIT_SHA'
+- 'us.gcr.io/flask-helloworld:${_TAG}'
+
 options:
   logging: CLOUD_LOGGING_ONLY
+
