--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,41 +1,19 @@
+substitutions:
+  _TAG: "1.0.0"
+
 steps:
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 
-           'us-central1-docker.pkg.dev/${PROJECT_ID}/${_ARTIFACT_REGISTRY_REPO}/myimage:${SHORT_SHA}', '.']
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push',  'us-central1-docker.pkg.dev/${PROJECT_ID}/${_ARTIFACT_REGISTRY_REPO}/myimage:${SHORT_SHA}']
-artifacts:
-  objects:
-    location: gs://${_BUCKET_NAME}/
-    paths:
-      - ${SHORT_SHA}_test_log.xml
+# Build the container image
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['build', '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/docker-images-repo/flask-helloworld:${_TAG}', '.']
+# Push the container image to Artifact Registry
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['push', 'us-central1-docker.pkg.dev/$PROJECT_ID/docker-images-repo/flask-helloworld:${_TAG}']
 images:
-  - us-central1-docker.pkg.dev/${PROJECT_ID}/${_ARTIFACT_REGISTRY_REPO}/myimage:${SHORT_SHA}
+- 'us-central1-docker.pkg.dev/$PROJECT_ID/docker-images-repo/flask-helloworld'
 
 options:
   logging: CLOUD_LOGGING_ONLY
 
 
 
-
-
-
-
-
-
-# substitutions:
-#   _TAG: "1.0.0"
-
-# steps:
-# - name: 'gcr.io/cloud-builders/docker'
-#   args: ['build', '-t', 'us.gcr.io/flask-helloworld:${_TAG}', '.']
-
-# - name: 'gcr.io/cloud-builders/docker'
-#   args: ['push', 'us.gcr.io/flask-helloworld:${_TAG}']
-
-# images:
-# - 'us.gcr.io/flask-helloworld:${_TAG}'
-
-# options:
-#   logging: CLOUD_LOGGING_ONLY
 
